Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16746

Linux? "Start and Debug external application" [apparently] clears environment variables with Desktop Kit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.1.0
    • Qt Creator 4.1.0
    • Debugger
    • None
    • 46191b2e865744c1678eb20652fa06466b75abcb

      Steps to reproduce:

      • Build some Qt example for X11/Desktop
      • Debug it as external executable by "Debug/Start and Debug external application" with normal Desktop kit
      • Note app does not start:
        DPY= ""
        Qt: gdb: -nograb added to command-line options.
        	 Use the -dograb option to enforce grabbing.
        QXcbConnection: Could not connect to display 
        

        1. qcreatorbug16746_diag.diff
          0.9 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTCREATORBUG-16746
        # Subject Branch Project Status CR V

            hjk hjk
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes