Debugger: Fix environment settings

... for "special" starts like Debug->Start Debugging->Start
and Debug External Application.

Change-Id: I9f9e682f4392efb5328eb8c08bf50dd33901f41d
Task-number: QTCREATORBUG-16746
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>