src/plugins/debugger/debuggerruncontrol.cpp
@@ -364,6 +364,10 @@ static DebuggerRunControl *doCreate(DebuggerRunParameters rp, RunConfiguration *
             rp.projectSourceDirectory = project->projectDirectory().toString();
             rp.projectSourceFiles = project->files(Project::SourceFiles);
         }
+    } else {
+        // "special" starts like Start and Debug External Application.
+        rp.inferior.environment = Environment::systemEnvironment();
+        rp.inferior.environment.modify(EnvironmentKitInformation::environmentChanges(kit));
     }
 
     if (ToolChain *tc = ToolChainKitInformation::toolChain(kit))
